--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3be6964d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51567c8f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3bea35210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3bea35410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5156763710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5156783390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3befe1b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3befe1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5156d97f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5156d30c10&gt;]</pre>
 </div>
 
 </div>
