--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53d18820d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3afe5c4850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d182d250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53d182d450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3afe595190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3afe595390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d1ddfc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53d1ddfe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3afeb31b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3afeb31d50&gt;]</pre>
 </div>
 
 </div>
