--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cf84acf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec0180cc90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf8781350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cf8781550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec017d3350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec017d3550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cf8d36c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cf8d36e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec01d82c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec01d82e50&gt;]</pre>
 </div>
 
 </div>
