--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7bd5e18e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0de6622bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bd5af1210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7bd5af1410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0de690e0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0de690e2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bd60a1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7bd60a1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0de6ea3a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0de6ea3c50&gt;]</pre>
 </div>
 
 </div>
