--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9eafe1f290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f301e6141d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9eafb30250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9eafb30450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f301e660d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f301e2e1250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9eb00ceb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9eb00ced10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f301e8f0ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f301e8a1c90&gt;]</pre>
 </div>
 
 </div>
