--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2012225c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25afc05a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f20121f11d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f20121f1410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25afeea190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25afeea390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f201278fb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f201278fd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25b049ab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25b049ad50&gt;]</pre>
 </div>
 
 </div>
