--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25afc05a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa838d91210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25afeea190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25afeea390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa838d43250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa838d43450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25b049ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25b049ad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8392f4b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8392f4d90&gt;]</pre>
 </div>
 
 </div>
