--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37fe034e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b9e5a4e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37fe001190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37fe001390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b9e88e290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b9e88e490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37fe598b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37fe598d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b9ee2bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b9ee2bd90&gt;]</pre>
 </div>
 
 </div>
