--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8bbdd67310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20794d5b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bbe033110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8bbe033290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20797d3310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20797d3510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bbe5f4ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8bbe5f4c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20794d5f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2079d67e90&gt;]</pre>
 </div>
 
 </div>
