--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f7bf39190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2f704ff90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f7c20f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f7c20f350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2f6a2b0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2f6a2b2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f7c7d0a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f7c7d0c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2f6fc1a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2f6fc1c10&gt;]</pre>
 </div>
 
 </div>
