--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd0d84ad50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f444e78f310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd0db451d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd0db453d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f444e46c150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f444e46c350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd0e0e1b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd0e0e1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f444ea079d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f444ea07bd0&gt;]</pre>
 </div>
 
 </div>
