--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19b4b796d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f038c2b4190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b48310d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b48312d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f038c274090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f038c274290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b4df39d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b4df3bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f038c80aa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f038c80ac10&gt;]</pre>
 </div>
 
 </div>
