--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b5f438c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fadf564dd90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b5f3fb3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b5f3fb610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fadf5c1b110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fadf5c1b310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b5f99ec10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b5f99ee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fadf61b09d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fadf61b0bd0&gt;]</pre>
 </div>
 
 </div>
