--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2329942650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5bfcb03410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2329607350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2329607550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bfca9e090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bfca9e2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2329bb7c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2329bb7e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bfd0b09d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bfd061b90&gt;]</pre>
 </div>
 
 </div>
