--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5031bee150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb89d5b9950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5031ba5250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5031ba5450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb89d89b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb89d89b490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5032146c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5032146e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb89de4eb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb89de4ed10&gt;]</pre>
 </div>
 
 </div>
