--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ed33aedd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcdbaa94190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed3066fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ed3083c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdbad64310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcdbad64510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed3624650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ed362fb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdbb313c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcdbb313e50&gt;]</pre>
 </div>
 
 </div>
