--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7e01b8f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00dfa54dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7e016b1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb7e016b3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00e001f290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00e001f490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7e071ba90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb7e071bc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00e05bbc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00e05bbe90&gt;]</pre>
 </div>
 
 </div>
