--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c909dd8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb6abe95d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c909a9150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c909a9350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb6a8ae3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb6a8ae5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c90f91890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c90f46c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb6ae61c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb6ae61e90&gt;]</pre>
 </div>
 
 </div>
