--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3326aca90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7881de6810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd33270b150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd33270b350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7881ad2150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7881ad2350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd332ca0a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd332ca0c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f788206ea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f788206ec50&gt;]</pre>
 </div>
 
 </div>
