--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf9d0175d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0362a33f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf9d387190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf9d387390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0362a4ba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03626f5290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf9d924a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf9d924c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0362d05cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0362cb9bd0&gt;]</pre>
 </div>
 
 </div>
