--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc082a9390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16561de350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc07f5be90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc07f960d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1655ea9050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1655ea9250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc0852d890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc0852da90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f165646b990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f165646bb90&gt;]</pre>
 </div>
 
 </div>
