--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f179f22b450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07f160f850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f179ebda050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f179ef22e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07f1bb0f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07f1bb81d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f179f1bf450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f179f170b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07f21788d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07f21b3590&gt;]</pre>
 </div>
 
 </div>
